--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -26,7 +26,6 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di \ref{analisi-dei-requisiti}, \ref{analisi-delle-tecnologie} e \ref{piano-di-progetto}}
 \addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Redazione}{Stesura di \ref{norme-sw}}
 \addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento e stesura \ref{fornitura}}
-\addversione{2.0.1}{22/03/2022}{Andrea Volpe}{Redazione}{Stesure di \ref{processi-primari-sviluppo}}
 
 \begin{document}
 
@@ -48,7 +47,7 @@ Lo scopo del presente documento è definire procedure, strumenti e criteri di qu
 \subsubsection{Gestione}
 \paragraph{Gestione tempistiche}
 \begin{itemize}
-	\item Lo sviluppo del prodotto (corrispondente all'inizio dello spring, \textbf{??link paragrafo spring})
+	\item Lo sviluppo del prodotto (corrispondente all'inizio dello sprint, \textbf{??link paragrafo sprint})
 	va da mercoledì al sabato estremi inclusi, i restanti 3 giorni vengono spesi per effettuare la verifica
 	sul lavoro svolto. 
 \end{itemize}
