Sistemato scrittura python

--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -166,7 +166,7 @@ La scrittura del codice deve rispetare le norme elencate di seguito
 \begin{itemize}
 	\item In caso di istruzione asincrona, deve essere inclusa all'interno di una \textit{Promise}.
 \end{itemize}
-\subparagraph{Phyton}
+\subparagraph{Python}
 \subparagraph{HTML}
 \begin{itemize}
 	\item Utilizzare tutte le buone prassi per rendere il sito accessibile, seguendo le linee guida 
