Fix ore consuntivo attuale

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -57,7 +57,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \begin{center}
     \begin{tabularx}{\textwidth}{|X|X|X|X|}
         \hline
-        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \multicolumn{4}{|c|}{\textbf{Ore effettive}}\\
         \hline
         \hline
         \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
@@ -66,16 +66,16 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
         \hline
         Amministratore  & 20 & 60  & 1200\\
         \hline
-        Analista        & 25 & 60  & 1500\\
+        Analista        & 25 & 57 (-3)  & 1425 (-75)\\
         \hline
         Progettista     & 25 & 80  & 2000\\
         \hline
-        Programmatore   & 15 & 45  & 675\\
+        Programmatore   & 15 & 46 (+1)  & 690 (+15)\\
         \hline
-        Verificatore    & 15 & 20  & 300\\
+        Verificatore    & 15 & 19 (-1)  & 285€ (-15)\\
         \hline
         \hline
-        \textbf{Totale} &    & 305 & 6875\\
+        \textbf{Totale} &    & 302 (-3) & 6800 (-75)\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
