Compilazione grafico di Gannt

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -48,9 +48,28 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
     time slot format = isodate
 ]{2021-12-01}{2022-04-29}
 \gantttitlecalendar{year, month=itname} \\
-\ganttbar{RTB}{2021-12-01}{2022-03-22} \\
-\ganttbar{PB}{2022-03-22}{2022-04-15} \\
-\ganttbar{CA}{2022-04-15}{2022-04-29}
+\ganttgroup{Documentazione}{2021-12-01}{2022-04-29} \\
+\ganttbar[progress=70]{Norme di Progetto}{2021-12-01}{2022-04-29} \\
+\ganttgroup[progress=100]{RTB}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Analisi dei requisiti}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Analisi delle tecnologie}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Piano di Progetto}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Piano di Qualifica}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Sviluppo PoC}{2022-01-02}{2022-02-08} \\
+\ganttbar[progress=100]{Presentazione PoC}{2022-01-02}{2022-02-08} \\
+\ganttgroup[progress=75]{PB}{2022-02-26}{2022-03-16} \\
+\ganttbar[progress=95]{Piano di Progetto}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=95]{Piano di Qualifica}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=80]{Specifica architetturale}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=65]{Manuale Utente}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Sviluppo Contratto}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Test Contratto}{2022-02-26}{2022-03-16} \\
+\ganttbar[progress=100]{Sviluppo Server}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Test Server}{2022-02-26}{2022-03-16} \\
+\ganttbar[progress=100]{Sviluppo Script Python}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Test Script}{2022-02-26}{2022-03-16} \\
+\ganttbar[progress=75]{Sviluppo WebApp}{2022-02-26}{2022-03-16} \\
+\ganttbar[progress=80]{Test WebApp}{2022-02-26}{2022-03-02}
 \end{ganttchart}
 
 \subsection{Consuntivo attuale}
