--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -146,9 +146,9 @@ I cicli di SCRUM avverranno ad intervalli settimanali, ogni ciclo inizia con una
 I cicli di SCRUM verranno elencati nella sezione seguente adottando una approccio schematico e disciplinato.\\
 Il primo ciclo sarà riassuntivo del lavoro fino all'RTB.
 
-\section{Cicli di SCRUM}
+\section{Sprint di SCRUM}
 
-\subsection{Ciclo 0}
+\subsection{Sprint 0}
 \textbf{Data di inizio:} 9-11-2021\\
 \textbf{Data di fine pianificata:} 23-03-2022\\
 \textbf{Data di fine effettiva:} N/A
