--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -3,7 +3,7 @@
 \usepackage{pdflscape}
 \usepackage{pgfgantt}
 \usepackage{pgfplots}
-
+\usepackage{tabularx}
 
 \newcommand{\templates}{../../template}
 \input{\templates/style}
@@ -22,6 +22,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022}
 \addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB}
 \addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
+\addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -34,156 +35,245 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 
 \makeversioni
 
-\section{Programmazione}
-\subsection{Revisioni di avanzamento}
-\paragraph{RTB}
-Prodotti necessari:
-\begin{itemize}
-\item Analisi dei Requisiti;
-\item Analisi delle Tecnologie;
-\item Proof of Concept.
+\tableofcontents
+\clearpage
+
+\section{Pianificazione generale}
+
+\subsection{Diagramma di Gannt}
+\begin{ganttchart}[
+    expand chart = \textwidth,
+    time slot format = isodate,
+    hgrid,
+    vgrid = {*6{draw=none}, dotted},
+    y unit title = .8cm,
+    y unit chart = .7cm,
+    group peaks width = 2,
+]{2021-12-01}{2022-04-29}
+\gantttitlecalendar{year, month=itname} \\
+\ganttgroup[progress=100]{RTB}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Analisi dei requisiti}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Analisi delle tecnologie}{2021-12-01}{2022-02-08} \\
+\ganttbar[progress=100]{Sviluppo PoC}{2022-01-02}{2022-02-08} \\
+\ganttgroup[progress=75]{PB}{2022-02-26}{2022-03-16} \\
+\ganttbar[progress=80]{Specifica architetturale}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=65]{Manuale Utente}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Sviluppo Contratto}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Sviluppo Server}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=100]{Sviluppo Script Python}{2022-02-26}{2022-03-05} \\
+\ganttbar[progress=75]{Sviluppo WebApp}{2022-02-26}{2022-03-16} \\
+\end{ganttchart}
+
+\subsection{Consuntivo attuale}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Ore effettive}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 40  & 1200\\
+        \hline
+        Amministratore  & 20 & 60  & 1200\\
+        \hline
+        Analista        & 25 & 57 (-3)  & 1425 (-75)\\
+        \hline
+        Progettista     & 25 & 80  & 2000\\
+        \hline
+        Programmatore   & 15 & 46 (+1)  & 690 (+15)\\
+        \hline
+        Verificatore    & 15 & 19 (-1)  & 285€ (-15)\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 302 (-3) & 6800 (-75)\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\subsection{Preventivo a finire}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 50  & 1500\\
+        \hline
+        Amministratore  & 20 & 40  & 800\\
+        \hline
+        Analista        & 25 & 60  & 1500\\
+        \hline
+        Progettista     & 25 & 50  & 1250\\
+        \hline
+        Programmatore   & 15 & 135  & 2025\\
+        \hline
+        Verificatore    & 15 & 80  & 1200\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 415 & 8275\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\section{Metodo di lavoro}
+Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecnica di Continuos Integration.\\
+Questo metodo si presta meglio di un modello a cascata data la difficoltà di realizzare una pianificazione accurata a monte con tecnologie poco conosciute.\\\\
+Tuttavia si terrà che:
+\begin{itemize} 
+    \item dei cicli non vadano a buon fine portando a iterazioni (ove incrementi sono sempre preferibili);
+    \item delle attività critiche blocchino le altre portando a una perdita di parallelismo all'interno del gruppo.
 \end{itemize}
+I cicli di SCRUM avverranno ad intervalli settimanali, ogni ciclo inizia con una riunione che comprende:
+\begin{itemize}
+    \item resoconto della settimana precedente;
+    \item focus su problematiche riscontrate e soluzioni adottate;
+    \item aggiornamento della pianificazione della settimana successiva;
+    \item assegnazioni degli item ai componenti del gruppo da parte del responsabile.
+\end{itemize}
+I cicli di SCRUM verranno elencati nella sezione seguente adottando una approccio schematico e disciplinato.\\
+Il primo ciclo sarà riassuntivo del lavoro fino all'RTB.
+
+\section{Sprint di SCRUM}
+
+\subsection{Sprint 0}
+\textbf{Data di inizio:} 9-11-2021\\
+\textbf{Data di fine pianificata:} 23-03-2022\\
+\textbf{Data di fine effettiva:} N/A
+
+\subsubsection{Pianificazione}\mbox{}
 
 
-\subsection{RTB}
-\paragraph{Analisi dei Requisiti}
-Inizio: 01/12/2021\par
-Fine prevista: 08/02/2022\par
-Fine effettiva: 09/02/2021
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Item da realizzare}}\\
+        \hline
+        \hline
+        \textbf{Item} & \textbf{Persone richieste}\\
+        \hline
+        Piano di progetto & 2\\
+        \hline
+        Piano di qualifica & 2\\
+        \hline
+        Norme di progetto & 2\\
+        \hline
+        Analisi delle tecnologie & 2\\
+        \hline
+        Analisi dei requisiti & 4\\
+        \hline
+        PoC & 3\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Analista & 42 & 52.5 & 25\euro & 1050\euro & 1312.5\euro \\\hline
-Verificatore & 8 & 11.5 & 15\euro & 120\euro & 172.5\euro \\\hline
-Totale ore: & 50 & 64 & Totale costi: & 1170\euro & 1485 \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & +14 & \multicolumn{2}{r|}{Differenza di costo:} & +315 \\\hline
-\end{tabular}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 40  & 1200\\
+        \hline
+        Amministratore  & 20 & 60  & 1200\\
+        \hline
+        Analista        & 25 & 60  & 1500\\
+        \hline
+        Progettista     & 25 & 80  & 2000\\
+        \hline
+        Programmatore   & 15 & 45  & 675\\
+        \hline
+        Verificatore    & 15 & 20  & 300\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 305 & 6875\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Andrea Volpe & Analista & 21 & 31.25  & +10.25 \\\hline
-Alberto Nicoletti & Analista & 21 & 21.25 & +0.25 \\\hline
-Giovanni Cocco & Verificatore & 8 & 7.5 & -0.5 \\\hline
-Elia Scandaletti & Verificatore & 0 & 3 & +3 \\\hline
-Raffaele Oliviero & Verificatore & 0 & 1 & +1 \\\hline
-\end{tabular}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Possibili problematiche}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Misure di mitigazione}\\
+        \hline
+        Difficoltà con le tecnologie & Si realizzeranno nel PoC prima le parti più critiche\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
-\paragraph{Analisi delle Tecnologie}
-Inizio: 01/12/2021\par
-Fine prevista: 08/02/2022\par
-Fine effettiva: 11/02/2022
+\subsubsection{Resoconto}\mbox{}
 
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Progettista & 42 & 80.5 & 25\euro & 1050\euro & 2012.5\euro \\\hline
-Verificatore & 6 & 2 & 15\euro & 90\euro & 30\euro \\\hline
-Totale ore: & 48 & 82.5 & Totale costi: & 1140\euro & 2042.5\euro \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & +34.5 & \multicolumn{2}{r|}{Differenza di costo:} & +902.5\euro \\\hline
-\end{tabular}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Ore effettive}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 40  & 1200\\
+        \hline
+        Amministratore  & 20 & 60  & 1200\\
+        \hline
+        Analista        & 25 & 57 (-3)  & 1425 (-75)\\
+        \hline
+        Progettista     & 25 & 80  & 2000\\
+        \hline
+        Programmatore   & 15 & 46 (+1)  & 690 (+15)\\
+        \hline
+        Verificatore    & 15 & 19 (-1)  & 285€ (-15)\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 302 (-3) & 6800 (-75)\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Matteo Galvagni & Progettista & 21 & 34.5 & +13.5 \\\hline
-Federico Marchi & Progettista & 21 & 46 & +25 \\\hline
-Giovanni Cocco & Verificatore & 6 & 2 & -4 \\\hline
-\end{tabular}
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Problematiche riscontrate}}\\
+        \hline
+        \hline
+        \textbf{Problema} & \textbf{Soluzione adottata}\\
+        \hline
+        Difficoltà di tracciamento del lavoro & Utilizzo issues GitHub\\
+        \hline
+        Difficoltà di coordinamento & Riunioni settimanali\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
-\paragraph{Piano di Progetto (RTB)}
-Inizio: 01/12/2021\par
-Fine prevista: 08/02/2022\par
-Fine effettiva: TBD
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Responsabile & 21 & 29 & 30\euro & 630\euro & 870\euro \\\hline
-Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
-Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Elia Scandaletti & Responsabile & 11 & 16 & +5 \\\hline
-Raffaele Oliviero & Responsabile & 10 & 13 & +3 \\\hline
-Giovanni Cocco & Verificatore & 3 & TBD & TBD \\\hline
-\end{tabular}
-
-\paragraph{Piano di Qualifica (RTB)}
-Inizio: 01/12/2021\par
-Fine prevista: 08/02/2022\par
-Fine effettiva: 05/02/2022
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Responsabile & 21 & 8 & 30\euro & 630\euro & 240\euro \\\hline
-Verificatore & 3 & 0.5 & 15\euro & 45\euro & 7.50\euro \\\hline
-Totale ore: & 24 & 8.5 & Totale costi: & 675\euro & 247.50\euro \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & -15.5 & \multicolumn{2}{r|}{Differenza di costo:} & -427.50\euro \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Elia Scandaletti & Responsabile & 10 & 5.5 & -4.5 \\\hline
-Raffaele Oliviero & Responsabile & 11 & 2.5 & -8.5 \\\hline
-Giovanni Cocco & Verificatore & 3 & 0.5 & -2.5 \\\hline
-\end{tabular}
-
-\paragraph{Sviluppo Proof of Concept}
-Inizio: 23/12/2021\par
-Fine prevista: 08/02/2022\par
-Fine effettiva: 07/02/2022
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Programmatore & 40 & 44 & 15\euro & 600\euro & 660\euro \\\hline
-Verificatore & 3 & 4 & 15\euro & 45\euro & 60\euro \\\hline
-Totale ore: & 43 & 48 & Totale costi: & 645\euro & 720\euro \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & +5 & \multicolumn{2}{r|}{Differenza di costo:} & +75\euro \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Giovanni Cocco & Programmatore & 20 & 21 & +1 \\\hline
-Matteo Galvagni & Programmatore & 20 & 23 & +3 \\\hline
-Elia Scandaletti & Verificatore & 3 & 4 & +1 \\\hline
-\end{tabular}
-
-\paragraph{Presentazione Proof of Concept}
-Inizio: 01/01/2021\par
-Fine prevista: 10/02/2022\par
-Fine effettiva: 09/02/2022
-
-Ore richieste:\\[0.5em]
-\begin{tabular}{|l|l|l||l|l|l|l|}\hline
-Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Responsabile & 2 & 2.5 & 30\euro & 60\euro & 75\euro \\\hline
-Verificatore & 0.5 & 0.5 & 15\euro & 7.50\euro & 7.50\euro \\\hline
-Totale ore: & 2.5 & 3 & Totale costi: & 67.50\euro & 82.50\euro \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & +0.5 & \multicolumn{2}{r|}{Differenza di costo:} & +15\euro \\\hline
-\end{tabular}
-
-Ruoli assegnati:\\[0.5em]
-\begin{tabular}{|l|l|l|l|l|}\hline
-Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Matteo Galvagni & Responsabile & 2 & 2.5 & +0.5 \\\hline
-Giovanni Cocco & Verificatore & 0.5 & 0.5 & 0 \\\hline
-\end{tabular}
-
-\paragraph{Grafico di Gannt}
-Il grafico di Gannt può essere consultato al seguente indirizzo: \underline{\href{https://tinyurl.com/swegannt}{https://tinyurl.com/swegannt}}.
-
-
-\subsection{Grafico dei costi}
-Il grafico dei costi può essere consultato al seguente indirizzo: \underline{\href{https://tinyurl.com/swecosti}{https://tinyurl.com/swecosti}}.
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Nozioni apprese}}\\
+        \hline
+        \hline
+        \textbf{Nozione} & \textbf{Conseguenza sulla pianificazione}\\
+        \hline
+        Necessità di meglio organizzare i documenti & Aumento dei tempi e costi inizialmente, poi la miglior documentazione porterà a un più celere sviluppo\\
+        \hline
+        Miglior comprensione delle tecnologie & Diminuzione delle ore previste di programmazione\\
+        \hline
+        Miglior compresone del capitolato & Pianificazione più accurata e minor incertezza futura\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
 
 \end{document}
