--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -46,7 +46,7 @@ Il processo di fornitura determina le attività e le risorse che servo per gesti
 \subsubsection{Repository pubblica}
 Durante tutto il progetto verrà usata un unica repository pubblica. La parte di repository che interessa al proponente ed al committente è la cartella \textit{public} definita come parte pubblica della repository. Questa cartella contiene un file read-me in cui viene spiegato ed elencato il contenuto della parte pubblica con un avviso che chiede di restarne all'interno, ignorando il resto della repository, detta parte privata.\\\\
 La parte pubblica contiene i documenti necessari alle revisioni di periodo con il committente.\\
-Ogni file nella parte pubblica deve indicare la versione nel nome del file stesso.\\
+Ogni file nella parte pubblica deve indicare la versione nel nome del file stesso nel seguente modo: $<$NomeFile$>$\_v$<$versione$>$.pdf.\\
 Ogni modifica alla parte pubblica deve essere approvata dal responsabile, cui spetta accettare le pull request della parte pubblica.
 \subsubsection{Contatti con proponente e committente}
 
