Aggiunto documenti mancanti e indici su public
Corretto intestazione verbale 2022_02_26_I

Modificato intestazione verbale 2022_02_26_I

Modificato lettera di presentazione rtb

Aggiunto indici ai documenti

Aggiunto indice analisi requisiti

Aggiunto analisi requisiti in public

Sistemato link readme public

--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -41,6 +41,9 @@ Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 
 \makeversioni
 
+\tableofcontents
+\pagebreak
+
 \section{Introduzione}
 \subsection{Scopo del documento}
 Lo scopo del documento è raccogliere i risultati dell'attività di analisi dei requisiti. Contiene quindi la descrizione dei casi d'uso del prodotto software da sviluppare, ed i requisiti suddivisi per tipologia. Si vuole così dimostrare una completa comprensione del problema e delle aspettative della soluzione. I casi d'uso, ma soprattutto i requisiti saranno tenuti in considerazione nelle fasi di progettazione, di verifica e di validazione.
