--- a/docs/interni/verbali/2022_03_23_I/2022_03_23_I.tex
+++ b/docs/interni/verbali/2022_03_23_I/2022_03_23_I.tex
@@ -43,7 +43,7 @@ Verbale dell'incontro del 23/03/2022.
 \section{Svolgimento}
 
 \subsection{Rielaborazione dei documenti}
-Ogni membro del gruppo ha esposto come ha rielaborato/steso le varie sezioni dei documenti \textit{Norme di Progetto}, \textit{Piano di Qualifica} e \textit{Piano di Progetto}. Gli argomenti trattati sono: 
+Ogni membro del gruppo ha esposto come ha rielaborato/steso le varie sezioni dei documenti \textit{Norme di Progetto}, \textit{Piano di Qualifica} e \textit{Piano di Progetto}. Gli argomenti trattati sono:
 \begin{itemize}
 	\item Elia Scandaletti: rielaborazione e stesura del \textit{Piano di Qualifica} e prima sezione del \textit{Piano di Progetto};
 	\item Alberto Nicoletti: rielaborazione e stesura della sezione 'Fornitura' nel documento \textit{Norme di Progetto};
@@ -51,7 +51,7 @@ Ogni membro del gruppo ha esposto come ha rielaborato/steso le varie sezioni dei
 	\item Raffaele Oliviero: rielaborazione e stesura della sezione 'Processi di Supporto' nel documento \textit{Norme di Progetto};
 	\item Andrea Volpe: rielaborazione e stesura della sezione 'Sviluppo' nel documento \textit{Norme di Progetto};
 	\item Federico Marchi: rielaborazione e stesura della sezione 'Processi Organizzativi' nel documento \textit{Norme di Progetto}.
-	\item Matteo Galvagni: rielaborazione e stesura della sezione 'Processi Organizzativi' nel documento \textit{Norme di Progetto}. Ricollocazione dei verbali.
+	\item Matteo Galvagni: rielaborazione e stesura della sezione 'Processi Organizzativi' nel documento \textit{Norme di Progetto}. Ricollocazione dei verbali.\\
 Sono stati ultimati durante l'incontro i documenti sopra elencati.
 \end{itemize}
 
@@ -61,7 +61,7 @@ Sono state determinate le seguenti tasks per il ciclo di sprint 1:
 \begin{enumerate}
 	\item eliminazione dei file pdf dal repo;
 	\item creazione della cartella pubblica e popolamento con i file pdf;
-	\item aggiornare il documento \textit{Analisi dei Requisiit} e contattare Cardin;
+	\item aggiornare il documento \textit{Analisi dei Requisiit} e contattare prof. Cardin;
 	\item completare lo sviluppo server;
 	\item completare la webapp;
 	\item completare lo script;
