--- a/docs/interni/verbali/2022_03_23_I/2022_03_23_I.tex
+++ b/docs/interni/verbali/2022_03_23_I/2022_03_23_I.tex
@@ -52,8 +52,8 @@ Ogni membro del gruppo ha esposto come ha rielaborato/steso le varie sezioni dei
 	\item Andrea Volpe: rielaborazione e stesura della sezione 'Sviluppo' nel documento \textit{Norme di Progetto};
 	\item Federico Marchi: rielaborazione e stesura della sezione 'Processi Organizzativi' nel documento \textit{Norme di Progetto}.
 	\item Matteo Galvagni: rielaborazione e stesura della sezione 'Processi Organizzativi' nel documento \textit{Norme di Progetto}. Ricollocazione dei verbali.\\
-Sono stati ultimati durante l'incontro i documenti sopra elencati.
 \end{itemize}
+Sono stati ultimati durante l'incontro i documenti sopra elencati.
 
 \subsection{Tasks per il ciclo di sprint 1}
 Il responsabile selezionato per il ciclo di sprint 1 è Elia Scandaletti. \\
@@ -82,12 +82,7 @@ L'assegnazione delle tasks ai membri per il ciclo di sprint 1 è avvenuta come s
 	\item Giovanni Cocco: task 4;
 	\item Elia Scandaletti: responsabile + tasks 9,10;
 	\item Federico Marchi: task 11;
-	\item Raffaele Oliviero: task 8;
-\end{itemize}
-
-
-\begin{itemize}
-
+	\item Raffaele Oliviero: task 8.
 \end{itemize}
 
 \end{document}
