--- a/docs/template/style.tex
+++ b/docs/template/style.tex
@@ -6,3 +6,8 @@
 
 \let\oldpar\paragraph
 \renewcommand{\paragraph}[1]{\oldpar{#1\\}\noindent}
+
+% Avoid dots in the table of contents, it mess with the gulpease calculation
+\makeatletter
+\renewcommand{\@dotsep}{10000} 
+\makeatother
