--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -23,6 +23,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB}
 \addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
 \addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento}
+\addversione{2.1.0}{26/03/2022}{Elia Scandaletti}{Redazione}{Sprint 1}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -143,7 +144,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
 \subsection{Sprint 0}
 \textbf{Data di inizio:} 9-11-2021\\
 \textbf{Data di fine pianificata:} 23-03-2022\\
-\textbf{Data di fine effettiva:} N/A
+\textbf{Data di fine effettiva:} 23-03-2022
 
 \subsubsection{Pianificazione}\mbox{}
 
@@ -281,6 +282,79 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         Miglior comprensione delle tecnologie & Diminuzione delle ore previste di programmazione\\
         \hline
         Miglior compresone del capitolato & Pianificazione più accurata e minor incertezza futura\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\subsection{Sprint 1}
+\textbf{Data di inizio:} 23-03-2022\\
+\textbf{Data di fine pianificata:} 30-03-2022\\
+\textbf{Data di fine effettiva:} N/A
+
+\subsubsection{Pianificazione}\mbox{}
+
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{Item da realizzare}}\\
+        \hline
+        \hline
+        \textbf{Item} & \textbf{Persone richieste}\\
+        \hline
+        Eliminazione pdf dalla parte privata del repo & 1\\
+        \hline
+        Creazione e popolamento cartella pubblica & 1\\
+        \hline
+        Aggiornamento documento \textit{Analisi dei Requisiti} & 1\\
+        \hline
+        Contattare prof. Cardin riguardo documento \textit{Analisi dei Requisiti} & 1\\
+        \hline
+        Sviluppo server & 1\\
+        \hline
+        Sviluppo WebApp & 1\\
+        \hline
+        Sviluppo script per messa in vendita prodotto & 1\\
+        \hline
+        Completamento contratto & 1\\
+        \hline
+        Inizio stesura documento \textit{Specifiche Architetturali} & 1\\
+        \hline
+        Aggiornamento documento \textit{Piano di Progetto} & 1\\
+        \hline
+        Aggiornamento documento \textit{Piano di qualifica} & 1\\
+        \hline
+        Stesura dei documenti \textit{Manuale Acquirente} & 1\\
+        \hline
+        Stesura dei documenti \textit{Manuale E-Commerce} & 1\\
+        \hline
+    \end{tabularx}\\[8pt]
+    \mbox{}\\
+\end{center}
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{|X|X|X|X|}
+        \hline
+        \multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}\\
+        \hline
+        \hline
+        \textbf{Ruolo} & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)}\\
+        \hline
+        Responsabile    & 30 & 3  & 90\\
+        \hline
+        Amministratore  & 20 & 2  & 40\\
+        \hline
+        Analista        & 25 & 10  & 250\\
+        \hline
+        Progettista     & 25 & 20  & 500\\
+        \hline
+        Programmatore   & 15 & 60  & 900\\
+        \hline
+        Verificatore    & 15 & 10  & 150\\
+        \hline
+        \hline
+        \textbf{Totale} &    & 105 & 1930\\
         \hline
     \end{tabularx}\\[8pt]
     \mbox{}\\
